[gd_scene load_steps=7 format=3 uid="uid://cfjumyxqjoc7h"]

[ext_resource type="Script" path="res://main.gd" id="1_44iii"]
[ext_resource type="PackedScene" uid="uid://csxexw5ela73j" path="res://floor.tscn" id="1_uvk7j"]
[ext_resource type="PackedScene" uid="uid://bc70oo88613ta" path="res://joe.tscn" id="2_e3foa"]
[ext_resource type="PackedScene" uid="uid://fivwcdice26q" path="res://lazer.tscn" id="3_xyxoh"]
[ext_resource type="PackedScene" uid="uid://dmac5ndi4j38m" path="res://destructor.tscn" id="5_nmh6i"]
[ext_resource type="PackedScene" uid="uid://47x671sm78b1" path="res://hud.tscn" id="6_r54l0"]

[node name="Main" type="Node"]
script = ExtResource("1_44iii")
lazer = ExtResource("3_xyxoh")

[node name="Floor" parent="." instance=ExtResource("1_uvk7j")]

[node name="Player" parent="." instance=ExtResource("2_e3foa")]
position = Vector2(150, 601)
scale = Vector2(2, 2)

[node name="Ceiling" parent="." instance=ExtResource("1_uvk7j")]
position = Vector2(-1, -609)

[node name="Destructor" parent="." instance=ExtResource("5_nmh6i")]

[node name="LazerSpawner" type="Timer" parent="."]
wait_time = 2.0

[node name="Spawn Location One" type="Marker2D" parent="."]
position = Vector2(1162, 440)

[node name="Spawn Location Two" type="Marker2D" parent="."]
position = Vector2(1162, 250)

[node name="Spawn Location Three" type="Marker2D" parent="."]
position = Vector2(1162, 60)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("6_r54l0")]

[connection signal="body_entered" from="Destructor" to="." method="_on_destructor_body_entered"]
[connection signal="timeout" from="LazerSpawner" to="." method="_on_lazer_spawner_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="start" from="HUD" to="." method="_on_hud_start"]
